--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-	"name": "Sniper_Auto-fire",
+	"name": "Sniper_Autofire",
 	"version_number": "1.0.0",
 	"website_url": "https://github.com/Klehrik/RoRR-SniperAutofire",
 	"description": "Auto-fires Sniper's default primary when the button is held.",
